new button feature added, but doesn't return gifs

--- a/index.html
+++ b/index.html
@@ -14,44 +14,20 @@
 </head>
 <body>
 
-    <button data-person="Kate McKinnon">
-        Kate McKinnon
-    </button>
+    <div id="new-buttons"></div>
+    
+    <form id="new-comedian">
+        <label for="comedian-input">Add a Comedian, Yo!</label>
+        <input type="text" id="comedian-input"><br>
+    
+        <!-- Button triggers new movie to be added -->
+        <input id="add-comedian" type="submit" value="Add Me!">
 
-    <button data-person="Tina Fey">
-        Tina Fey
-    </button>   
 
-    <button data-person="Amy Poehler">
-        Amy Poehler
-    </button>
-
-    <button data-person="Kristen Wiig">
-        Kristen Wiig
-    </button>
-
-    <button data-person="Cecily Strong">
-        Cecily Strong
-    </button>
-
-    <button data-person="Aidy Bryant">
-        Aidy Bryant
-    </button>
-
-    <button data-person="Nasim Pedrad">
-        Nasim Pedrad
-    </button>
-
-    <button data-person="Melissa Villasenor">
-        Melissa Villasenor
-    </button>
 
 
     <div id="gifs-section">
     </div>
-
-<div id="gifs-appear-here">
-</div>
 
 
 
